--- a/HoPe/Foerder/templates/Foerder/donate_fv_ghana.html
+++ b/HoPe/Foerder/templates/Foerder/donate_fv_ghana.html
@@ -72,7 +72,7 @@
       <div>
         <div class="hope-float-left hope-margin-10 hope-slideshow-container">
           <div class="hope-slideshow-slide hope-slideshow-fade">
-            <img class="donate-fv-ghana-pic-02-03" src="{% static 'WorkInProgress.png' %}">
+            <img class="donate-fv-ghana-pic-02-03" src="{% static 'Hope_JR2020_14.jpg' %}">
           </div>
           <div class="hope-slideshow-slide hope-slideshow-fade">
             <img class="donate-fv-ghana-pic-02-04" src="{% static 'Hope_JR2020_05.JPG' %}">
@@ -86,7 +86,7 @@
       <div class="hope-width-100 hope-text-align-center">
         <img class="donate-fv-ghana-pic-02-06 hope-display-inline-block hope-width-33" src="{% static 'Hope_JR2020_01.jpg' %}">
         <img class="donate-fv-ghana-pic-02-07 hope-display-inline-block hope-width-33" src="{% static 'Hope_01.jpeg' %}">
-        <img class="donate-fv-ghana-pic-02-08 hope-display-inline-block hope-width-33" src="{% static 'WorkInProgress.png' %}">
+        <img class="donate-fv-ghana-pic-02-08 hope-display-inline-block hope-width-33" src="{% static 'Hope_JR2020_09.jpeg' %}">
       </div>
     </div>
   </div>
@@ -105,10 +105,10 @@
       <img class="donate-fv-ghana-pic-04-01 hope-float-left hope-margin-10" src="{% static 'Hope_JR2020_06.jpeg' %}">
       <div class="hope-display-block hope-float-right hope-margin-10">
         <div>
-          <img class="donate-fv-ghana-pic-04-02" src="{% static 'WorkInProgress.png' %}">
+          <img class="donate-fv-ghana-pic-04-02" src="{% static 'Hope_JR2020_16.JPG' %}">
         </div>
         <div>
-          <img class="donate-fv-ghana-pic-04-03" src="{% static 'WorkInProgress.png' %}">
+          <img class="donate-fv-ghana-pic-04-03" src="{% static 'Hope_JR2020_15.JPG' %}">
         </div>
       </div>
       <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_04_01" %} </div>
@@ -120,8 +120,8 @@
 
   <div class="content">
     <h2> {% trans "donate_fv_ghana_headline_05" %} </h2>
-    <img class="donate-fv-ghana-pic-05-01 hope-float-left hope-margin-10" src="{% static 'WorkInProgress.png' %}">
-    <img class="donate-fv-ghana-pic-05-02 hope-float-right hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+    <img class="donate-fv-ghana-pic-05-01 hope-float-left hope-margin-10" src="{% static 'Hope_JR2020_10.JPG' %}">
+    <img class="donate-fv-ghana-pic-05-02 hope-float-right hope-margin-10" src="{% static 'Hope_JR2020_11.JPG' %}">
     <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_05_01" %} </div>
   </div>
 
@@ -138,22 +138,22 @@
     <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_07_03" %} </div>
     <div class="hope-width-100 hope-text-align-center">
       <img class="donate-fv-ghana-pic-07-01" src="{% static 'WorkInProgress.png' %}">
-      <img class="donate-fv-ghana-pic-07-02" src="{% static 'WorkInProgress.png' %}">
+      <img class="donate-fv-ghana-pic-07-02" src="{% static 'Hope_JR2020_12.jpeg' %}">
     </div>
     <div class="hope-display-inline-block">
-      <img class="donate-fv-ghana-pic-07-03 hope-float-right hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+      <img class="donate-fv-ghana-pic-07-03 hope-float-right hope-margin-10" src="{% static 'Hope_JR2020_17.JPG' %}">
       <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_07_04" %} </div>
     </div>
     <div class="hope-width-100 hope-text-align-center">
-      <img class="donate-fv-ghana-pic-07-04" src="{% static 'WorkInProgress.png' %}">
-      <img class="donate-fv-ghana-pic-07-05" src="{% static 'WorkInProgress.png' %}">
+      <img class="donate-fv-ghana-pic-07-04" src="{% static 'Hope_JR2020_13.JPG' %}">
+      <img class="donate-fv-ghana-pic-07-05" src="{% static 'Hope_JR2020_12.JPG' %}">
     </div>
   </div>
 
   <div class="content">
     Bau von neuen Brunnen
     <h2> {% trans "donate_fv_ghana_headline_08" %} </h2>
-    <img class="donate-fv-ghana-pic-08 hope-float-left hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+    <img class="donate-fv-ghana-pic-08 hope-float-left hope-margin-10" src="{% static 'Hope_JR2020_18.jpeg' %}">
     <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_08_01" %} </div>
   </div>
 
@@ -162,12 +162,12 @@
     <h2> {% trans "donate_fv_ghana_headline_09" %} </h2>
     <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_09_01" %} </div>
     <div class="hope-width-100">
-      <img class="donate-fv-ghana-pic-09-01 hope-float-left hope-margin-10" src="{% static 'WorkInProgress.png' %}">
-      <img class="donate-fv-ghana-pic-09-02 hope-float-left hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+      <img class="donate-fv-ghana-pic-09-01 hope-float-left hope-margin-10" src="{% static 'Hope_JR2020_20.jpeg' %}">
+      <img class="donate-fv-ghana-pic-09-02 hope-float-left hope-margin-10" src="{% static 'Hope_JR2020_19.jpeg' %}">
       <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_09_02" %} </div>
     </div>
     <div class="hope-display-inline-block">
-      <img class="donate-fv-ghana-pic-09-03 hope-float-left hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+      <img class="donate-fv-ghana-pic-09-03 hope-float-left hope-margin-10" src="{% static 'Hope_JR2020_21.jpg' %}">
       <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_09_03" %} </div>
     </div>
     <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_09_04" %} </div>
