--- a/HoPe/Foerder/templates/Foerder/donate_fv_ghana.html
+++ b/HoPe/Foerder/templates/Foerder/donate_fv_ghana.html
@@ -151,19 +151,17 @@
   </div>
 
   <div class="content">
-    Bau von neuen Brunnen
     <h2> {% trans "donate_fv_ghana_headline_08" %} </h2>
     <img class="donate-fv-ghana-pic-08 hope-float-left hope-margin-10" src="{% static 'Hope_JR2020_18.jpeg' %}">
     <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_08_01" %} </div>
   </div>
 
   <div class="content">
-    Die Farm
     <h2> {% trans "donate_fv_ghana_headline_09" %} </h2>
     <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_09_01" %} </div>
     <div class="hope-width-100">
       <img class="donate-fv-ghana-pic-09-01 hope-float-left hope-margin-10" src="{% static 'Hope_JR2020_20.jpeg' %}">
-      <img class="donate-fv-ghana-pic-09-02 hope-float-left hope-margin-10" src="{% static 'Hope_JR2020_19.jpeg' %}">
+      <img class="donate-fv-ghana-pic-09-02 hope-float-right hope-margin-10" src="{% static 'Hope_JR2020_19.jpeg' %}">
       <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_09_02" %} </div>
     </div>
     <div class="hope-display-inline-block">
