--- a/HoPe/static/css/donate_fv_ghana.css
+++ b/HoPe/static/css/donate_fv_ghana.css
@@ -73,13 +73,11 @@ width:500px;
 }
 
 .donate-fv-ghana-pic-07-01 {
-width:65%;
-height: 400px;
+width:calc((100% - 40px) * (2/3));
 }
 
 .donate-fv-ghana-pic-07-02 {
-width:25%;
-height: 400px;
+width:calc((100% - 40px) * (1/3))
 }
 
 .donate-fv-ghana-pic-07-03 {
@@ -95,7 +93,7 @@ width:calc((100% - 40px) / 2);
 }
 
 .donate-fv-ghana-pic-08 {
-width:200px;
+width:300px;
 }
 
 .donate-fv-ghana-pic-09-01 {
