iphone :hover bug

--- a/HoPe/Foerder/templates/Foerder/events.html
+++ b/HoPe/Foerder/templates/Foerder/events.html
@@ -27,7 +27,7 @@
       </ul>
     </div>
   </div>
-  <div class="menu">
+  <div onclick="" class="menu">
     <div class="menu-button">
       menu
     </div>
