--- a/HoPe/Foerder/templates/Foerder/donate_fv_ghana.html
+++ b/HoPe/Foerder/templates/Foerder/donate_fv_ghana.html
@@ -26,7 +26,7 @@
       </ul>
     </div>
   </div>
-  <div class="menu">
+  <div onclick="" class="menu">
     <div class="menu-button">
       menu
     </div>
