--- a/HoPe/Foerder/templates/Foerder/donate_fv_ghana.html
+++ b/HoPe/Foerder/templates/Foerder/donate_fv_ghana.html
@@ -137,7 +137,7 @@
     <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_07_02" %} </div>
     <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_07_03" %} </div>
     <div class="hope-width-100 hope-text-align-center">
-      <img class="donate-fv-ghana-pic-07-01" src="{% static 'WorkInProgress.png' %}">
+      <img class="donate-fv-ghana-pic-07-01" src="{% static 'Hope_JR2020_22.jpeg' %}">
       <img class="donate-fv-ghana-pic-07-02" src="{% static 'Hope_JR2020_12.jpeg' %}">
     </div>
     <div class="hope-display-inline-block">
