--- a/HoPe/Foerder/templates/Foerder/donate_fv_ghana.html
+++ b/HoPe/Foerder/templates/Foerder/donate_fv_ghana.html
@@ -102,7 +102,14 @@
   <div class="content">
     <h2> {% trans "donate_fv_ghana_headline_04" %} </h2>
     <div class="hope-display-inline-block">
-      <img class="donate-fv-ghana-pic-04-01 hope-float-left hope-margin-10" src="{% static 'Hope_JR2020_06.jpeg' %}">
+      <div class="hope-float-left hope-margin-10 hope-display-block">
+        <div>
+          <img class="donate-fv-ghana-pic-04-01 " src="{% static 'Hope_JR2020_06.jpeg' %}">
+        </div>
+        <div>
+          <img class="donate-fv-ghana-pic-04-04" src="{% static 'Hope_04.jpeg' %}">
+        </div>
+      </div>
       <div class="hope-display-block hope-float-right hope-margin-10">
         <div>
           <img class="donate-fv-ghana-pic-04-02" src="{% static 'Hope_JR2020_16.JPG' %}">
@@ -114,7 +121,7 @@
       <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_04_01" %} </div>
     </div>
     <div class="hope-width-100 hope-text-align-center">
-      <img class="donate-fv-ghana-pic-04-04" src="{% static 'Hope_04.jpeg' %}">
+
     </div>
   </div>
 
@@ -137,6 +144,7 @@
     <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_07_02" %} </div>
     <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_07_03" %} </div>
     <div class="hope-width-100 hope-text-align-center">
+      <img class="donate-fv-ghana-pic-07-06" src="{% static 'Hope_JR2020_23.jpeg' %}">
       <img class="donate-fv-ghana-pic-07-01" src="{% static 'Hope_JR2020_22.jpeg' %}">
       <img class="donate-fv-ghana-pic-07-02" src="{% static 'Hope_JR2020_12.jpeg' %}">
     </div>
